src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_print_multi_expr.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction print.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023


{
    print("Hello", "world");
}