src/test/deca/syntax/invalid/homemade/test/test_pars_inv_intruction_or_expr_multiple_espace_barre.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les or_expr
//
// Resultats:
//    Ligne 11 : Erreur ( espace entre "||")
//    
//
// Historique:
//    cree le 04/01/2023
{
    expression_bidon | | expression_bidon1;
}
